# fastapi_realworld

./: .env.example  .flake8  README.rst  alembic.ini  beautify.sh  docker-compose-tests.yml  pyproject.toml
.launch/local/api/: Dockerfile
.launch/tests/: .tests_env
.launch/tests/api/: Dockerfile
docs/source/: api.rst  base_commands.rst  conf.py  db_structure.rst  env_variables.rst  index.rst
src/app/: gunicorn_config.py  log_utils.py  main.py
src/app/api/: routers.py
src/app/api/core/: utils.py
src/app/api/core/schemas/: req_schemas.py  resp_schemas.py
src/app/api/v1/: routers.py
src/app/api/v1/auth/endpoints/: auth.py  basis.py
src/app/api/v1/auth/schemas/: req_schemas.py  resp_schemas.py
src/app/api/v1/users/endpoints/: basis.py  users.py
src/app/api/v1/users/schemas/: resp_schemas.py
src/app/config/: settings.py
src/app/core/: di_containers.py
src/app/core/db_schemas/: users.py
src/app/core/models/: users.py
src/app/core/repositories/: base.py  users.py
src/app/core/services/: auth.py  base.py  jwt.py  users.py  utils.py
src/app/core/utils/: common.py
src/app/extensions/: db.py
src/app/graphql/: context.py  routers.py  schemas.py
src/app/graphql/queries/: query.py
src/migrations/: env.py
src/migrations/versions/: 71996f45e161_init_users_table.py
tests/: conftest.py
tests/core/repositories/: fixtures.py  test_users.py
tests/core/services/: auth.py
